fix: reorder footer content to fix insufficient spacing between links, adjust desktop layout to prevent narrowing caused by native scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,7 +61,7 @@ h4:hover .heading-anchor-link svg:hover {
     --at-apply: 'after:bottom-0.68em';
   }
   .footer-highlight-position-fix {
-    --at-apply: 'after:bottom-0.34em';
+    --at-apply: 'after:bottom-0.39em';
   }
 }
 
